versioned_docs/version-2026.1.2/turma/ago/ago2024-dp.mdx
---
slug: /turma/ago2024-dp
sidebar_label: AGO2024-DP
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "AGO2024-DP",
  "base": "AGO",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "BIOLOGIA II (490)",
          "size": 1,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "QUÍMICA II (493)",
          "size": 1,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "ZOOTECNIA GERAL (494)",
          "size": 1,
          "teachers": [
            "Leiliane Cristine de Souza"
          ],
          "classroom": "sala_5-2",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "BIOLOGIA II (490)",
          "size": 1,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "QUÍMICA II (493)",
          "size": 1,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "ZOOTECNIA GERAL (494)",
          "size": 1,
          "teachers": [
            "Leiliane Cristine de Souza"
          ],
          "classroom": "sala_5-2",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "ARTES II (489)",
          "size": 2,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "PRODUÇÃO ANIMAL I (492)",
          "size": 2,
          "teachers": [
            "Roberto Haruyoshi Ito"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGO2024-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Língua Portuguesa e Literatura II (491)",
          "size": 1,
          "teachers": [
            "Docente DP Letras"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Matemática I",
          "size": 1,
          "teachers": [
            "Elenice Josefa Kolancko Setti"
          ],
          "classroom": "sala_3-1",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura II (491)",
          "size": 1,
          "teachers": [
            "Docente DP Letras"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Matemática I",
          "size": 1,
          "teachers": [
            "Elenice Josefa Kolancko Setti"
          ],
          "classroom": "sala_3-1",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# AGO2024-DP

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
